# IotInternshipCodeChallengeMay2018

./: .gitignore  README.md  temp.ino
docs/: CodeChallengeSteps.md  IoTCodeChallengeMay2018.md
solution/task1/arduino/task1/: task1.ino
solution/task1/c/: CMakeLists.txt
solution/task1/c/lib/: libclimate.c  libclimate.h
solution/task1/c/src/: main.c
solution/task1/c/test/: run_tests.c  test_climate.c
solution/task1/cpp/: CMakeLists.txt
solution/task1/cpp/lib/: libclimate.cc  libclimate.hpp
solution/task1/cpp/src/: main.cc
solution/task1/cpp/test/: test_libclimate.cc
solution/task1/pio/lib/libclimate/: libclimate.cc  libclimate.hpp
solution/task1/pio/src/: main.cc
solution/task1/python/: README.md  app.py  libclimate.py  test_libclimate.py
solution/task2/cpp/: CMakeLists.txt  install_lib_paho.sh  install_lib_paho_cpp.sh
solution/task2/cpp/include/mraa/: CMakeLists.txt
solution/task2/cpp/src/: main.cc
solution/task2/pio/: platformio.ini
solution/task2/pio/src/: main.cc
sub1/: Wiring.fzz  temp.ino
sub1/AfricasTalkingIOT-dist-master/: LICENSE  README.md  keywords.txt  libraries.json  library.properties
sub1/AfricasTalkingIOT-dist-master/examples/ATWINC1500/ATWINC1500Hello/: ATWINC1500Hello.ino
sub1/AfricasTalkingIOT-dist-master/examples/ATWINC1500/ATWINC1500ProdPublish/: ATWINC1500ProdPublish.ino
sub1/AfricasTalkingIOT-dist-master/examples/ATWINC1500/ATWINC1500QoS0/: ATWINC1500QoS0.ino
sub1/AfricasTalkingIOT-dist-master/examples/ATWINC1500/ATWINC1500QoS2/: ATWINC1500QoS2.ino
sub1/AfricasTalkingIOT-dist-master/examples/ATWINC1500/ATWINC1500Sandbox/: ATWINC1500Sandbox.ino
sub1/AfricasTalkingIOT-dist-master/examples/ATWINC1500/ATWINC1500SandboxPublish/: ATWINC1500SandboxPublish.ino
sub1/AfricasTalkingIOT-dist-master/examples/ATWINC1500/ATWINQoSn/: ATWINQoSn.ino
sub1/AfricasTalkingIOT-dist-master/examples/CC3000/CC3000LivePublish/: CC3000LivePublish.ino
sub1/AfricasTalkingIOT-dist-master/examples/CC3000/CC3000Publish/: CC3000Publish.ino
sub1/AfricasTalkingIOT-dist-master/examples/CC3000/HelloCC3000/: HelloCC3000.ino
sub1/AfricasTalkingIOT-dist-master/examples/ESP8266/ESP8266Hello/: ESP8266Hello.ino
sub1/AfricasTalkingIOT-dist-master/examples/Edison/HelloEdison/: HelloEdison.ino
sub1/AfricasTalkingIOT-dist-master/examples/GSM/HelloSIM/: HelloSIM.ino
sub1/AfricasTalkingIOT-dist-master/src/: AfricasTalkingCloud.cpp  AfricasTalkingCloud.h
sub1/F7N07ERIZ6CKBKF/W5100MQTT_v2/: W5100MQTT_v2.ino
